# llm-connector

./: .env.example  .gitignore  Makefile  README.md  TECH_STACK.md  pyproject.toml  setup.ps1  setup.sh
src/llm_connector/: config.py  main.py  mcp_client.py  schemas.py
