[tool.poetry]
name = "llm-connector"
version = "0.1.0"
description = "OpenAI-compatible vLLM server template — native bare-metal, no Docker"
authors = []
readme = "README.md"
packages = [{include = "llm_connector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = ">=0.111"}
pydantic-settings = ">=2.2"
python-dotenv = ">=1.0"
uvicorn = {extras = ["standard"], version = "*"}

[tool.poetry.group.nvidia]
optional = true

[tool.poetry.group.nvidia.dependencies]
vllm = ">=0.4.3"


[tool.poetry.scripts]
llm-connector = "llm_connector.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
